2014-05-22 Added command reset to SourceList addon
2014-05-21 Added possibility to style correct/wrong answers to Coloring module
2014-05-20 Fixed issue with states in Line Number addon
2014-05-16 Removed navigation pages for single page
2014-05-16 Fixed issues with states and reset in Done addon
2014-05-16 Fixed issue with Graph module on page change
2014-05-16 New Gap type: Math in Text module
2014-05-15 Added commands hide and show to Done addon
2014-05-12 Added commands setColor(color), setThickness(thickness), setEraserOn() and setEraserThickness(thickness) to Drawing addon
2014-05-11 Added isAttempted, setAttempted, isAllOK to Plot addon
2014-05-10 Choice returns max score on All ok event.
2014-05-08 New commands in Points and Lines addon: markAsCorrect, markAsWrong, markAsNeutral, isConnected, isEmpty
2014-05-08 Fixed problem with Coloring module not displaying coordinates in editor
2014-05-08 Fixed problem with check counter in report after reopening page
2014-05-07 Setting visibility of Feedback module on reset
2014-05-07 Fixed issue with True/False addon on Firefox mobile browser
2014-05-06 Added show/hide methods to Feedback addon
2014-05-06 Fixed problem with reading page name with special characters
2014-05-06 Fixed problem with dragging image source and source list while in editor mode
2014-05-05 Added ability to define constant letters in Crossword addon
2014-04-30 Fixed issue with custom events improper behaviour in Advanced Connector
2014-04-24 Popup button is active while in check answers mode
2014-04-23 Fixed issue with incorrect glossary widget position for Glossary addon placed in header/footer
2014-04-22 Fixed issue with slow response of Connection addon
2014-04-22 Fixed issue with correct answer mark for drop-down gaps in Table addon
2014-04-22 Fixed bug with selected page number in Table of Contents addon
2014-04-18 Removed restrictions to URLs in External Link Button