@@ -1,0 +1,5 @@
+/* https://code.google.com/p/android/issues/detail?id=35474 */
+div.Viewer_3D_frame {
+    overflow: hidden;
+    overflow-x: visible;
+}
